<resources>
    <string name="app_name">Shopping Mate</string>
    <string name="password">Password</string>
    <string name="forgotten_password">Forgotten Password?</string>
    <string name="log_in">Log In</string>
    <string name="or">OR</string>
    <string name="log_in_with_gmail">Log In with gmail</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="username_or_email_address">Username or email address</string>
</resources>