<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CD000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:fontFamily="@font/aguafina_script"
        android:text="Shopping Mate"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/app_name"
        android:id="@+id/tilUsername"
        android:textColorHint="@color/white"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/white"
            android:hint="Username or email address"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:id="@+id/etName"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tilUsername"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white"
        android:id="@+id/tilPassword"
        android:textColorHint="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/white"
            android:hint="@string/password"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:id="@+id/etPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvForgottenPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/forgotten_password"
        android:textColor="#804AEB"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"
        android:layout_marginEnd="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/log_in"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"
        android:layout_marginTop="40dp"
        android:background="#2196F3"
        android:textStyle="bold"
        android:id="@+id/btnLogin"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:id="@+id/llOr"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        >
        <View
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="1dp"
            android:background="@color/white"
            android:id="@+id/leftline"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:gravity="center"
            />

        <View
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="1dp"
            android:background="@color/white"
            android:id="@+id/rigtline"
            />
    </LinearLayout>

    <ImageView
        android:id="@+id/ivgmail"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/logo_gmail"
        app:layout_constraintEnd_toStartOf="@+id/tvgmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llOr" />

    <TextView
        android:id="@+id/tvgmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="172dp"
        android:text="@string/log_in_with_gmail"
        android:textColor="#9754F4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/ivgmail"
        app:layout_constraintStart_toEndOf="@+id/ivgmail"
        app:layout_constraintTop_toBottomOf="@+id/llOr" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#9AFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="60dp"
        android:id="@+id/bottom_line"
        />

    <TextView
        android:id="@+id/tvNewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.443"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom_line" />

    <TextView
        android:id="@+id/tvSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up"
        android:textColor="#9754F4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toEndOf="@id/tvNewUser"
        app:layout_constraintTop_toBottomOf="@+id/bottom_line" />


</androidx.constraintlayout.widget.ConstraintLayout>